# ansible-collection-kolla

./: .ansible-lint  .coveragerc  .gitignore  .gitreview  .stestr.conf  .yamllint  CONTRIBUTING.rst  HACKING.rst  README.md  galaxy.yml  lint-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
releasenotes/notes/: Upgrade-docker-py-library-min.-version-03d409040723c614.yaml  add-docker-apt-key-env-1fa084e207f068f7.yaml  bug-2004583-341238937cc71bef.yaml  bug-2008761-d23c8b12763a6d7f.yaml  bug-2148747-b17a10513fce0042.yaml  containerd-path-eb67bbb5aa035be1.yaml  docker-config-check-mode-2d105eb73e2f2d09.yaml  docker-pin-afd0150e3550ce00.yaml  docker-py-bump-7-da022c5f6337d2dd.yaml  docker-systemd-restart-c0b9534602460df7.yaml  document-known-issue-with-crun-on-ubuntu-6772b7c7ee867908.yaml  drop-docker-custom-option-6c8251c750473558.yaml  drop-zun-support-55fb46041bb82d2b.yaml  etc-hosts-no-facts-0b3a1a6fa15d3b2f.yaml  fix-apt-repositories-and-drop-apt-key-ff4c062f5689c91e.yaml  fix-bootstrap-b86bd73b0a05d76e.yaml  fix-include-docker-log-opts-15607fb5a4ad3ed5.yaml  improve-container-registry-ca-conditional-0247b0014379ba82.yaml  move-podman-socket-activation-6b94d5be242d9879.yaml  move-tasks-aefc996d33570bf8.yaml  not-create-user-by-default-0907eee2b6a38615.yaml  podman-containers-config-154f36cbd6fd3f3a.yaml  podman-reno-177fa763533e8909.yaml  ubuntu-podman-catatonit-d5cb9249473844e0.yaml
releasenotes/source/: conf.py  index.rst
tools/: run-ansible-sanity.sh
zuul.d/: project.yaml
(+49 files in other folders)
