[metadata]
name = ansible-collection-kolla
summary = Ansible collection for OpenStack Kolla
description_file =
    README.md
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://www.openstack.org/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    ansible-collection-kolla
